# docs/swagger.yaml
@@ -1,5 +1,42 @@
 basePath: /
 definitions:
+  problemdetails.ProblemDetails:
+    properties:
+      detail:
+        description: |-
+          Detail is a human-readable explanation specific to this
+          occurrence of the problem.
+          If present, it ought to focus on helping the client
+          correct the problem, rather than giving debugging information.
+        type: string
+      instance:
+        description: |-
+          Instance is a URI reference that identifies the specific
+          occurrence of the problem.  It may or may not yield further
+          information if dereferenced.
+        type: string
+      status:
+        description: |-
+          Status is the HTTP status code ([RFC7231], Section 6)
+          generated by the origin server for this occurrence of the problem.
+        type: integer
+      title:
+        description: |-
+          Title is a short, human-readable summary of the problem
+          type.  It SHOULD NOT change from occurrence to occurrence of the
+          problem, except for purposes of localization (e.g., using
+          proactive content negotiation; see [RFC7231], Section 3.4).
+        type: string
+      type:
+        description: |-
+          Type is a URI reference [RFC3986] that identifies the
+          problem type. This specification encourages that, when
+          dereferenced, it provide human-readable documentation for the
+          problem type (e.g., using HTML [W3C.REC-html5-20141028]).  When
+          this member is not present, its value is assumed to be
+          "about:blank".
+        type: string
+    type: object
   service.CalculatePersonDataRequest:
     properties:
       taxCode:
@@ -76,6 +113,18 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/service.CalculatePersonDataResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
       summary: Calculate data of a person starting from his tax code.
   /api/v1/taxcode:calculate-tax-code:
     post:
@@ -95,5 +144,17 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/service.CalculateTaxCodeResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/problemdetails.ProblemDetails'
       summary: Calculate tax code starting from the data of a person.
 swagger: "2.0"
